--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,5 +19,9 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^7.0.4"
+	},
+	"dependencies": {
+		"dompurify": "^3.2.7",
+		"marked": "^16.3.0"
 	}
 }
